truncate feed title to one line with ellipsis fix #4006

--- a/src/github.com/getlantern/lantern-ui/app/_css/news.css
+++ b/src/github.com/getlantern/lantern-ui/app/_css/news.css
@@ -179,6 +179,9 @@
 #news h4 {
   font-weight: 700;
   line-height: 18px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 /* http://hackingui.com/front-end/a-pure-css-solution-for-multiline-text-truncation/ */
